2009-11-27  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        style-queue should only process each patch once
        https://bugs.webkit.org/show_bug.cgi?id=31939

        Before processing a patch, the try-queues now ask the web service
        whether they have already processed the patch.  This is an initial cut
        of this functionality.  I expect we're make it richer over time.

        * Scripts/bugzilla-tool:
        * Scripts/modules/commands/queues.py:
        * Scripts/modules/patchcollection.py:

2009-11-27  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        PatchStatus does not return status
        https://bugs.webkit.org/show_bug.cgi?id=31938

        We need to parse attachment_id as an int.  Otherwise, we can't find
        anything in the datastore.

        * CommitQueueStatus/queue_status.py:

2009-11-27  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Make commit-queue status not throw an exception where there is not
        status
        https://bugs.webkit.org/show_bug.cgi?id=31936

        We need to actually fetch the results of the query to see what's in the
        datastore.

        * CommitQueueStatus/queue_status.py:

2009-11-27  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        [bzt] unit test ApplyPatches and ApplyAttachment
        https://bugs.webkit.org/show_bug.cgi?id=31935

        * Scripts/modules/commands/download.py:
        * Scripts/modules/commands/download_unittest.py:

2009-11-27  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        [bzt] Unit test download commands
        https://bugs.webkit.org/show_bug.cgi?id=31923

        Adds download_unittest and fixes a bug found while testing.

        * Scripts/modules/commands/commandtest.py:
        * Scripts/modules/commands/download.py:
            Fixed a bug where we'd throw an error because [].append returns
            None.