@@ -2,6 +2,16 @@
 
         Reviewed by Eric Seidel.
 
+        [bzt] Support --status-host in style-queue
+        https://bugs.webkit.org/show_bug.cgi?id=31941
+
+        * Scripts/modules/commands/queues.py:
+        * Scripts/modules/statusbot.py:
+
+2009-11-27  Adam Barth  <abarth@webkit.org>
+
+        Reviewed by Eric Seidel.
+
         style-queue should only process each patch once
         https://bugs.webkit.org/show_bug.cgi?id=31939
 
